--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "grunt": "~0.4.1",
     "grunt-includes": "~0.4.0",
     "grunt-contrib-less": "~0.6.4",
-    "grunt-contrib-watch": "~0.6.1"
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-contrib-concat": "~0.4.0"
   }
 }
