--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "grunt-includes": "~0.4.0",
     "grunt-contrib-less": "~0.6.4",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-contrib-concat": "~0.4.0"
+    "grunt-contrib-concat": "~0.4.0",
+    "grunt-contrib-copy": "~0.5.0"
   }
 }
