Removed build folder. Added Slider Panels to settings.json. Adjusted HTML for Sliders to remove need for nested Barley IDs. Added default content for first run of homepage for slider content.

--- a/settings.json
+++ b/settings.json
@@ -5,7 +5,8 @@
     "content_types": {
     		"service": "Service",
     		"team": "Team Member",
-            "gallery": "Gallery Piece"
+            "gallery": "Gallery Piece",
+            "slider": "Slider Panel"
     }
     
 }
