Updated Package to latest LESS. Google Map is now based on business address. Added default messages for each index. Renamed portfolio to gallery.

--- a/settings.json
+++ b/settings.json
@@ -5,7 +5,7 @@
     "content_types": {
     		"service": "Service",
     		"team": "Team Member",
-            "gallery": "Gallery Piece",
+            "gallery": "Gallery Item",
             "slider": "Slider Panel"
     }
     
